# wallpaper_changer

./: .gitignore  LICENSE  README.md
src/: index.html  main.css  main.js
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: simpletab.js
