[package]
name = "wallpaperchanger"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3.2.0"
rand = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
image = "0.25.9"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
