[package]
name = "wallpaperchanger"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3.2.0"
rand = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
image = "0.25.9"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
